# nextjs-django-auth-example

./: README.md
backend/: db.sqlite3  pyproject.toml
backend/api/: models.py  views.py
backend/api/migrations/: 0001_initial.py
backend/api/utils/: auth.py
backend/fixtures/: users.json
backend/jwtauth/: settings.py  urls.py
backend/user/: models.py
backend/user/migrations/: 0001_initial.py
frontend/: .env.example  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/: route.ts
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/auth/sign-in/: page.tsx
frontend/components/: AppBar.tsx  Login.tsx  index.ts
frontend/components/Button/: LoginButton.tsx  LogoutButton.tsx
